# sveve

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
changelog.d/: 20240117_074932_alex.simpson_issue1.md  20240118_105923_alex.simpson_issue3.md
src/sveve/: client.py
sveve/: client.py
sveve/tests/: test_client.py
tests/: test_client.py
